# vulnfeed

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.github/workflows/: ci.yml
assets/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
assets/src/: App.jsx
assets/src/components/: Layout.jsx  Navigation.jsx  ProtectedRoute.jsx
assets/src/lib/: api.js
assets/src/routes/: home.jsx
assets/src/routes/auth/: login.jsx
assets/src/routes/dingbot/: config.jsx
assets/src/routes/plugins/: list.jsx
assets/src/routes/secnotice/: list.jsx
assets/src/routes/sync/: task.jsx
assets/src/routes/vuln/: detail.jsx  list.jsx
dev/: config.toml
migrations/: 20250815063449_initial.sql  20250828161829_create_ding_bot_config_table.sql  20250908060503_vuln_information_add_detail_link.sql  20250919085151_create_security_notice_table.sql
scripts/: init_db.sh
src/: cli.rs  errors.rs  lib.rs
src/config/: settings.rs
src/domain/: ports.rs  services.rs
src/domain/models/: admin_user.rs  auth.rs  ding_bot.rs  extension_data.rs  mod.rs  page_utils.rs  security_notice.rs  sync_data_task.rs  vuln_information.rs
src/input/http/: http_server.rs  mod.rs  response.rs  spa_endpoint.rs
src/input/http/handlers/: ding_bot_config.rs  login.rs  mod.rs  plugin.rs  sec_notice.rs  sync_data_task.rs  vuln_information.rs
src/input/http/middleware/: auth.rs
src/output/: mod.rs  scheduler.rs  sec_notcie_worker.rs  worker.rs
src/output/db/: admin_user.rs  base.rs  ding_bot_config.rs  mod.rs  pg.rs  repository_impl.rs  security_notice.rs  sync_data_task.rs  vuln_information.rs
src/output/plugins/: avd.rs  kev.rs  mod.rs  oscs.rs  seekbug.rs  threatbook.rs  ti.rs
src/output/plugins/sec_notice/: apple.rs  fanruan.rs  firefox.rs  grafana.rs  mod.rs  oracle.rs  sangfor.rs  seeyon.rs  smartbi.rs  tongtech.rs  vmware.rs  weaver.rs  yongyou.rs
src/output/plugins/vuln/: avd.rs  kev.rs  mod.rs  oscs.rs  seekbug.rs  threatbook.rs  ti.rs
src/output/push/: ding_bot.rs  mod.rs
src/output/worker/: worker.rs
src/utils/: http_client.rs  mod.rs  password_hash.rs  runtime.rs  search.rs  styled.rs  telemetry.rs  util.rs  version.rs
src/utils/auth/: jwt.rs
