[package]
name = "vulnfeed"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vulnfeed"
path = "src/bin/vulnfeed/main.rs"

[dependencies]
anstyle = "1.0.11"
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive"] }
const_format = "0.2.34"
ctrlc = "3.4.7"
dashmap = "6.1.0"
error-stack = "0.5.0"
fastimer = "0.9.0"
gix-discover = "0.41.0"
lazy_static = "1.5.0"
local-ip-address = "0.6.5"
log = "0.4.27"
logforth = { version = "0.27.0", features = [
    "colored",
    "layout-json",
    "append-fastrace",
    "append-rolling-file",
    "diagnostic-fastrace",
] }
mea = "0.4.0"
modql = { version = "0.4.1", features = ["with-sea-query"] }
nutype = { version = "0.6.2", features = ["serde"] }
pin-project = "1.1.10"
poem = "3.1.12"
reqwest = { version = "0.12.23", features = ["json"] }
sea-query = { version = "0.32.7", features = ["postgres-array"] }
sea-query-binder = { version = "0.7.0", features = [
    "sqlx-postgres",
    "with-time",
    "postgres-array",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
shadow-rs = "1.2.1"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "uuid",
    "migrate",
    "chrono",
] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tokio-cron-scheduler = { version = "0.14.0", features = ["signal"] }
toml_edit = { version = "0.23.3", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }

[build-dependencies]
build-data = "0.3.3"
gix-discover = "0.41.0"
shadow-rs = "1.2.1"
